changes done for ngoAlignment issue

--- a/app/sections/main_hni.scss
+++ b/app/sections/main_hni.scss
@@ -44,6 +44,10 @@ margin-top:20px;
 {
 margin-left:25px;
 }
+.mgn_rt
+{
+margin-right:477px !important;
+}
 .mgn_left_50
 {
 margin-left:250px;
@@ -55,6 +59,7 @@ background:#449d44;
 .border{
 border:1px solid #c0c0c0;
 margin-top:20px;
+
 }
 
 .mgn_left_volunteer
